Fixing more bugs... many left to go